src/main/java/com/example/lonua/common/error/ErrorResponse.java
package com.example.lonua.common.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ErrorResponse {

    private final String code;
    private final String message;
}
